Archive2/1b/29b473b41e8ccb/output
main.cpp:9:31: error: no matching member function for call to 'getline'
    std::string in = std::cin.getline();
                     ~~~~~~~~~^~~~~~~
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/istream:619:5: note: candidate function not viable: requires 3 arguments, but 0 were provided
    getline(char_type* __s, streamsize __n, char_type __delim);
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/istream:427:7: note: candidate function not viable: requires 2 arguments, but 0 were provided
      getline(char_type* __s, streamsize __n)
      ^
1 error generated.
